// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLinks renders without error for EU 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="select-none mt-4"
      >
        <small>
          Search on:
        </small>
        <div
          class="flex flex-row justify-center mt-2 gap-4"
        >
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://google.com/search?hl=en&q=abc123"
            rel="noreferrer"
            target="_blank"
          >
            Google
          </a>
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://app.justis.com/search/abc123/1/Relevance"
            rel="noreferrer"
            target="_blank"
          >
            Justis
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="select-none mt-4"
    >
      <small>
        Search on:
      </small>
      <div
        class="flex flex-row justify-center mt-2 gap-4"
      >
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://google.com/search?hl=en&q=abc123"
          rel="noreferrer"
          target="_blank"
        >
          Google
        </a>
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://app.justis.com/search/abc123/1/Relevance"
          rel="noreferrer"
          target="_blank"
        >
          Justis
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExternalLinks renders without error for Singapore 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="select-none mt-4"
      >
        <small>
          Search on:
        </small>
        <div
          class="flex flex-row justify-center mt-2 gap-4"
        >
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://google.com/search?hl=en&q=abc123"
            rel="noreferrer"
            target="_blank"
          >
            Google
          </a>
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://www.lawnet.sg/?clerkent-query=abc123"
            rel="noreferrer"
            target="_blank"
          >
            LawNet
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="select-none mt-4"
    >
      <small>
        Search on:
      </small>
      <div
        class="flex flex-row justify-center mt-2 gap-4"
      >
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://google.com/search?hl=en&q=abc123"
          rel="noreferrer"
          target="_blank"
        >
          Google
        </a>
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://www.lawnet.sg/?clerkent-query=abc123"
          rel="noreferrer"
          target="_blank"
        >
          LawNet
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExternalLinks renders without error for UK 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="select-none mt-4"
      >
        <small>
          Search on:
        </small>
        <div
          class="flex flex-row justify-center mt-2 gap-4"
        >
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://google.com/search?hl=en&q=abc123"
            rel="noreferrer"
            target="_blank"
          >
            Google
          </a>
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://uk.westlaw.com/Browse/Home/WestlawUK/Cases?clerkent-query=abc123&clerkent-type=case-name"
            rel="noreferrer"
            target="_blank"
          >
            Westlaw UK
          </a>
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://www.lexisnexis.com/uk/legal/home/home.do?clerkent-query=abc123"
            rel="noreferrer"
            target="_blank"
          >
            LexisNexis UK
          </a>
          <a
            class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
            href="https://app.justis.com/search/abc123/1/Relevance"
            rel="noreferrer"
            target="_blank"
          >
            Justis
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="select-none mt-4"
    >
      <small>
        Search on:
      </small>
      <div
        class="flex flex-row justify-center mt-2 gap-4"
      >
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://google.com/search?hl=en&q=abc123"
          rel="noreferrer"
          target="_blank"
        >
          Google
        </a>
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://uk.westlaw.com/Browse/Home/WestlawUK/Cases?clerkent-query=abc123&clerkent-type=case-name"
          rel="noreferrer"
          target="_blank"
        >
          Westlaw UK
        </a>
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://www.lexisnexis.com/uk/legal/home/home.do?clerkent-query=abc123"
          rel="noreferrer"
          target="_blank"
        >
          LexisNexis UK
        </a>
        <a
          class="py-1 px-2 border border-solid border-gray-400 rounded hover:bg-gray-200"
          href="https://app.justis.com/search/abc123/1/Relevance"
          rel="noreferrer"
          target="_blank"
        >
          Justis
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
